--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "dayjs": "^1.7.8",
     "draft-js": "^0.10.0",
     "express": "^4.14.1",
     "fastclick": "^1.0.6",
@@ -28,7 +29,6 @@
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "lodash": "^4.17.4",
-    "moment": "^2.17.1",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
@@ -37,7 +37,7 @@
     "query-string": "^4.3.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
@@ -62,13 +62,15 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-register": "^6.26.0",
     "babel-template": "^6.22.0",
     "babel-types": "^6.22.0",
     "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
     "css-loader": "^0.26.1",
+    "debug": "^4.1.0",
+    "detect-indent": "^5.0.0",
     "editorconfig-tools": "^0.1.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
@@ -85,11 +87,11 @@
     "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.2.12",
-    "postcss-assets": "^4.1.0",
+    "postcss-assets": "^5.0.0",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^3.0.0",
     "postcss-custom-media": "^5.0.1",
@@ -104,8 +106,7 @@
     "postcss-pseudoelements": "^3.0.0",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
-    "postcss-url": "^5.1.2",
-    "pre-commit": "^1.2.2",
+    "postcss-url": "^8.0.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.4.2",
     "react-deep-force-update": "^2.0.1",
@@ -122,7 +123,7 @@
     "stylefmt": "^5.1.1",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.1.2",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.3.0",
     "webpack-dev-middleware": "^1.10.0",
@@ -220,7 +221,7 @@
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
     "build": "babel-node tools/run build",
-    "build:stats": "yarn run build -- --release --analyse",
+    "release": "yarn run build -- --release",
     "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
